--- a/webapp/front/front/src/app/features/feed/feed-post-content/feed-post-content.component.html
+++ b/webapp/front/front/src/app/features/feed/feed-post-content/feed-post-content.component.html
@@ -21,11 +21,11 @@
           <span class="post-date">{{ humanReadableDate }}</span>
         </div>
       </div>
-      <p style="font-size: 20px" class="mt-2 font-weight-bolder c-text">
+      <p style="font-size: 24px" class="mt-2 font-weight-bolder c-text">
         {{ post.title }}
       </p>
-      <div class="divider m-b-20"></div>
-      <div class="postcard-description">
+      <div class="divider mb-3 mt-2"></div>
+      <div class="postcard-description mb-3" style="font-size: 15px">
         {{ post.body }}
       </div>
     </div>
