--- a/webapp/front/front/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
+++ b/webapp/front/front/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
@@ -20,7 +20,7 @@
       #editForm="ngForm"
       enctype="multipart/form-data"
     >
-      <div class="f-c-c-c pl-3 pr-3 c-text" style="width: 500px">
+      <div class="f-c-c-c ps-3 pe-3 c-text" style="width: 500px">
         <!-- Error Messages Placeholder -->
 
         <div class="w-75 f-c-c-c" style="gap: 10px">
