--- a/webapp/front/front/src/app/features/unverified/unverified-page/unverified-page.component.html
+++ b/webapp/front/front/src/app/features/unverified/unverified-page/unverified-page.component.html
@@ -7,8 +7,16 @@
         style="text-align: center"
       >
         <!-- Big heading -->
-        <p style="color: var(--primary); font-size: 30px" i18n>
-          Hello, you're one step away from becoming a neighbor!
+        <p
+          style="font-size: 50px"
+          class="c-primary font-weight-bold mb-4 mt-4"
+          i18n
+        >
+          Hello there!
+        </p>
+
+        <p style="font-size: 24px" class="c-primary mb-4" i18n>
+          You're one step away from becoming a neighbor!
         </p>
         <br />
         <p i18n>We've already sent your request to the administration,</p>
