--- a/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
+++ b/webapp/front/front/src/app/features/admin/admin-create-event/admin-create-event.component.html
@@ -1,67 +1,118 @@
-<div class="cool-static-container m-b-20" style="word-wrap: break-word;" aria-hidden="true">
-    <h2 class="card-title">Create New Event</h2>
-    <div class="divider mb-3 mt-3"></div>
+<div
+  class="cool-static-container m-b-20"
+  style="word-wrap: break-word"
+  aria-hidden="true"
+>
+  <h2 class="card-title">Create New Event</h2>
+  <div class="divider mb-3 mt-3"></div>
 
-    <!-- Form for creating a new event -->
-    <form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
-        <div class="form-column" style="margin-top:1rem;">
+  <!-- Form for creating a new event -->
+  <form [formGroup]="eventForm" (ngSubmit)="onSubmit()">
+    <div class="form-column" style="margin-top: 1rem">
+      <!-- Event Name -->
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input
+          id="name"
+          type="text"
+          class="cool-input"
+          formControlName="name"
+          placeholder="Enter event name"
+        />
+        <div
+          *ngIf="
+            eventForm.controls['name'].invalid &&
+            eventForm.controls['name'].touched
+          "
+          class="form-error"
+        >
+          Name is required.
+        </div>
+      </div>
 
-            <!-- Event Name -->
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input id="name" type="text" class="cool-input" formControlName="name" placeholder="Enter event name" />
-                <div *ngIf="eventForm.controls['name'].invalid && eventForm.controls['name'].touched"
-                    class="form-error">
-                    Name is required.
-                </div>
-            </div>
+      <!-- Description -->
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea
+          id="description"
+          rows="5"
+          class="cool-input textarea-min-max"
+          formControlName="description"
+          placeholder="Enter event description"
+        ></textarea>
+        <div
+          *ngIf="
+            eventForm.controls['description'].invalid &&
+            eventForm.controls['description'].touched
+          "
+          class="form-error"
+        >
+          Description is required.
+        </div>
+      </div>
 
-            <!-- Description -->
-            <div class="form-group">
-                <label for="description">Description</label>
-                <textarea id="description" rows="5" class="cool-input textarea-min-max" formControlName="description"
-                    placeholder="Enter event description"></textarea>
-                <div *ngIf="eventForm.controls['description'].invalid && eventForm.controls['description'].touched"
-                    class="form-error">
-                    Description is required.
-                </div>
-            </div>
-
-            <!-- Date -->
-            <div class="f-c-c-c w-100">
-                <div class="">
-                    <label for="date" class="mb-1">Date</label>
-                    <input id="date" type="date" class="cool-input" formControlName="date" />
-                    <div *ngIf="eventForm.controls['date'].invalid && eventForm.controls['date'].touched"
-                        class="form-error">
-                        Date is required.
-                    </div>
-                </div>
-
-                <!-- Start Time and End Time -->
-                <div class="f-r-sb-c">
-                    <div class="col-6 ps-0">
-                        <label for="startTime" class="mb-1">Start Time</label>
-                        <input id="startTime" type="time" class="cool-input" formControlName="startTime" />
-                    </div>
-                    <div class="col-6 pr-0">
-                        <label for="endTime" class="mb-1">End Time</label>
-                        <input id="endTime" type="time" class="cool-input" formControlName="endTime" />
-                    </div>
-                </div>
-                <div *ngIf="eventForm.hasError('startBeforeEnd') && (eventForm.dirty || eventForm.touched)">
-                    <p class="error">Start Time must be earlier than End Time</p>
-                </div>
-            </div>
-
+      <!-- Date -->
+      <div class="f-c-c-c w-100">
+        <div class="">
+          <label for="date" class="mb-1">Date</label>
+          <input
+            id="date"
+            type="date"
+            class="cool-input"
+            formControlName="date"
+          />
+          <div
+            *ngIf="
+              eventForm.controls['date'].invalid &&
+              eventForm.controls['date'].touched
+            "
+            class="form-error"
+          >
+            Date is required.
+          </div>
         </div>
 
-        <!-- Submit Button -->
-        <div class="d-flex justify-content-end mt-3">
-            <button type="submit" class="cool-button cool-small on-bg w-25 font-weight-bolder"
-                [disabled]="eventForm.invalid">
-                Create
-            </button>
+        <!-- Start Time and End Time -->
+        <div class="f-r-sb-c">
+          <div class="col-6 ps-0">
+            <label for="startTime" class="mb-1">Start Time</label>
+            <input
+              id="startTime"
+              type="time"
+              class="cool-input"
+              formControlName="startTime"
+            />
+          </div>
+          <div class="col-6 pe-0">
+            <label for="endTime" class="mb-1">End Time</label>
+            <input
+              id="endTime"
+              type="time"
+              class="cool-input"
+              formControlName="endTime"
+            />
+          </div>
         </div>
-    </form>
+        <div
+          *ngIf="
+            eventForm.hasError('startBeforeEnd') &&
+            (eventForm.dirty || eventForm.touched)
+          "
+        >
+          <p class="error">Start Time must be earlier than End Time</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Submit Button -->
+    <div class="d-flex justify-content-end mt-3">
+      <button
+        type="submit"
+        class="cool-button cool-small on-bg w-25 font-weight-bolder"
+        [disabled]="eventForm.invalid"
+      >
+        Create
+      </button>
+    </div>
+  </form>
 </div>
