--- a/webapp/front/front/src/app/features/information/information-page/information-page.component.html
+++ b/webapp/front/front/src/app/features/information/information-page/information-page.component.html
@@ -1,68 +1,98 @@
-<div [class.dark-mode]="darkMode">
-  <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 
-  <div class="container">
-    <div class="row">
-      <div class="column-left">
-        <app-sidebar></app-sidebar>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="column-left">
+      <app-sidebar></app-sidebar>
+    </div>
 
-      <div class="column-middle">
-        <div class="cool-static-container m-b-20" style="word-wrap: break-word;" aria-hidden="true">
-          <h2 class="mb-3">Contact Information</h2>
-          <div *ngIf="contacts.length === 0; else contactTable">
-            <div class="no-posts-found">
-              <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-              Information not found
-            </div>
-          </div>
-          <ng-template #contactTable>
-            <div class="d-flex flex-column justify-content-center align-items-center w-100">
-              <table class="table-striped w-100">
-                <tr>
-                  <th class="day">Name</th>
-                  <th>Address</th>
-                  <th>Phone Number</th>
-                </tr>
-                <tr *ngFor="let contact of contacts">
-                  <td class="day">{{ contact.name }}</td>
-                  <td>{{ contact.address }}</td>
-                  <td>{{ contact.phoneNumber }}</td>
-                </tr>
-              </table>
-            </div>
-          </ng-template>
-          <div class="d-flex justify-content-center mt-3" *ngIf="contactTotalPages > 1">
-            <app-paginator [totalPages]="contactTotalPages" [currentPage]="contactCurrentPage"
-              [pageSize]="contactPageSize" (pageChange)="onContactPageChange($event)">
-            </app-paginator>
+    <div class="column-middle">
+      <div
+        class="cool-static-container m-b-20"
+        style="word-wrap: break-word"
+        aria-hidden="true"
+      >
+        <h2 class="mb-3">Contact Information</h2>
+        <div *ngIf="contacts.length === 0; else contactTable">
+          <div class="no-posts-found">
+            <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+            Information not found
           </div>
         </div>
-
-        <div *ngFor="let resource of resources" class="cool-static-container m-b-20" style="word-wrap: break-word;"
-          aria-hidden="true">
-          <div class="d-flex flex-column justify-content-center align-items-center w-100">
-            <h2>{{ resource.title }}</h2>
-            <h3 style="all: unset;">{{ resource.description }}</h3>
-            <div class="mt-3" *ngIf="resource.image"
-              style="display: flex; justify-content: center; align-items: center;">
-              <img [src]="resource.image" style="max-width: 100%; max-height: 100vh; border-radius: 5px;"
-                [alt]="'resource image ' + resource.title" />
-            </div>
+        <ng-template #contactTable>
+          <div
+            class="d-flex flex-column justify-content-center align-items-center w-100"
+          >
+            <table class="table-striped w-100">
+              <tr>
+                <th class="day">Name</th>
+                <th>Address</th>
+                <th>Phone Number</th>
+              </tr>
+              <tr *ngFor="let contact of contacts">
+                <td class="day">{{ contact.name }}</td>
+                <td>{{ contact.address }}</td>
+                <td>{{ contact.phoneNumber }}</td>
+              </tr>
+            </table>
           </div>
-        </div>
-        <div class="d-flex justify-content-center mt-3" *ngIf="resourceTotalPages > 1">
-          <app-paginator [totalPages]="resourceTotalPages" [currentPage]="resourceCurrentPage"
-            [pageSize]="resourcePageSize" (pageChange)="onResourcePageChange($event)">
+        </ng-template>
+        <div
+          class="d-flex justify-content-center mt-3"
+          *ngIf="contactTotalPages > 1"
+        >
+          <app-paginator
+            [totalPages]="contactTotalPages"
+            [currentPage]="contactCurrentPage"
+            [pageSize]="contactPageSize"
+            (pageChange)="onContactPageChange($event)"
+          >
           </app-paginator>
         </div>
       </div>
 
-      <div class="column-right">
-        <app-calendar-widget></app-calendar-widget>
+      <div
+        *ngFor="let resource of resources"
+        class="cool-static-container m-b-20"
+        style="word-wrap: break-word"
+        aria-hidden="true"
+      >
+        <div
+          class="d-flex flex-column justify-content-center align-items-center w-100"
+        >
+          <h2>{{ resource.title }}</h2>
+          <h3 style="all: unset">{{ resource.description }}</h3>
+          <div
+            class="mt-3"
+            *ngIf="resource.image"
+            style="display: flex; justify-content: center; align-items: center"
+          >
+            <img
+              [src]="resource.image"
+              style="max-width: 100%; max-height: 100vh; border-radius: 5px"
+              [alt]="'resource image ' + resource.title"
+            />
+          </div>
+        </div>
+      </div>
+      <div
+        class="d-flex justify-content-center mt-3"
+        *ngIf="resourceTotalPages > 1"
+      >
+        <app-paginator
+          [totalPages]="resourceTotalPages"
+          [currentPage]="resourceCurrentPage"
+          [pageSize]="resourcePageSize"
+          (pageChange)="onResourcePageChange($event)"
+        >
+        </app-paginator>
       </div>
     </div>
-  </div>
 
-  <app-wave-footer></app-wave-footer>
+    <div class="column-right">
+      <app-calendar-widget></app-calendar-widget>
+    </div>
+  </div>
 </div>
+
+<app-wave-footer></app-wave-footer>
